--- a/src/app/pages/game/game.component.css
+++ b/src/app/pages/game/game.component.css
@@ -1,15 +1,65 @@
-/* .linear-blue {
-  background: linear-gradient(90deg, #08aeea 0%, #b721ff 100%);
+/* game.component.css
+
+.popup-overlay, .options-popup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 10;
 }
 
-.btn-shadow {
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+.popup, .options {
+  width: 28rem;
+  height: 24rem;
+  background: linear-gradient(to right, #2193b0, #6dd5ed);
+  border-radius: 2rem;
+  position: relative;
 }
 
-.btn-quick-shadow {
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+.popup .result-img, .options .result-img {
+  width: 48%;
+  height: 32%;
+  margin-top: -20%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.linear-pinky {
-  background: linear-gradient(90deg, #ff758c 0%, #ff7eb3 100%);
+.popup .popup-buttons, .options .options-buttons {
+  margin-top: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+.popup-btn, .options-btn {
+  color: white;
+  text-align: center;
+  font-size: 1.25rem;
+  padding: 0.5rem 1rem;
+  border-radius: 2rem;
+  background: #1e90ff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.popup-btn:hover, .options-btn:hover {
+  background: #0d6efd;
+}
+
+.popup-btn-quit, .options-btn-quit {
+  background: linear-gradient(to right, #ff758c, #ff7eb3);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.popup-btn-quit:hover, .options-btn-quit:hover {
+  background: linear-gradient(to right, #ff1e56, #ff7eb3);
 } */
