--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 }
 
 .linear-blue {
-  background: linear-gradient(to bottom, #6a11cb, #2575fc);
+  background: linear-gradient(to bottom, #2575fc, #140e66);
 }
 .btn-shadow {
   box-shadow: inset 0 -3px 0 3px #140e66, inset 0 3px 0 4px #2463ff;
