--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -118,19 +118,19 @@
       <div class="popup-buttons mt-10 flex flex-col items-center justify-center gap-6">
         <button
           (click)="restartGame()"
-          class="popup-btn text-white text-center text-4xl max-sm:text-xl cursor-pointer"
+          class="popup-btn py-2 px-10 rounded-full bg-blue-2 shadow-lg uppercase btn-shadow text-white text-center text-4xl max-sm:text-xl cursor-pointer"
         >
           New Game
         </button>
         <button
           (click)="selectNewCategory()"
-          class="popup-btn text-white text-center text-4xl max-sm:text-xl cursor-pointer"
+          class="popup-btn  py-2 px-10 rounded-full bg-blue-2 shadow-lg uppercase btn-shadow text-white text-center text-4xl max-sm:text-xl cursor-pointer"
         >
           New Category
         </button>
         <button
           (click)="exitGame()"
-          class="popup-btn text-white text-center text-4xl max-sm:text-xl cursor-pointer"
+          class="popup-btn text-white text-center text-4xl max-sm:text-xl cursor-pointer  py-2 px-10 rounded-full linear-pinky shadow-lg uppercase btn-quick-shadow"
         >
           Quit game
         </button>
@@ -149,21 +149,21 @@
       <div class="options-buttons mt-10 flex flex-col items-center justify-center gap-6">
         <button
           (click)="resumeGame()"
-          class="options-btn text-white text-center text-4xl max-sm:text-xl cursor-pointer"
+          class="popup-btn  py-2 px-10 rounded-full bg-blue-2 shadow-lg uppercase btn-shadow text-white text-center text-4xl max-sm:text-xl cursor-pointer"
         >
           Continue
         </button>
         <button
           (click)="selectNewCategory()"
-          class="options-btn text-white text-center text-4xl max-sm:text-xl cursor-pointer"
+          class="popup-btn  py-2 px-10 rounded-full bg-blue-2 shadow-lg uppercase btn-shadow text-white text-center text-4xl max-sm:text-xl cursor-pointer"
         >
-          Select New Category
+          New Category
         </button>
         <button
           (click)="exitGame()"
-          class="options-btn text-white text-center text-4xl max-sm:text-xl cursor-pointer"
+          class="popup-btn text-white text-center text-4xl max-sm:text-xl cursor-pointer  py-2 px-10 rounded-full linear-pinky shadow-lg uppercase btn-quick-shadowr"
         >
-          Quit
+          Quit Game
         </button>
       </div>
     </div>
