--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -1,4 +1,4 @@
-<div class="w-[70%] max-lg:w-[90%] mx-auto py-10 max-sm:py-2 text-white">
+<div class="w-[70%] max-lg:w-[90%] mx-auto py-10 max-sm:py-2 text-white font-mouseMemoirs">
   <div class="w-full flex items-center mt-5 max-sm:mt-5">
     <button
       class="h-24 w-24 max-sm:h-16 max-sm:w-16 rounded-full"
@@ -7,7 +7,7 @@
       <div
         class="w-full h-full max-sm:h-14 max-sm:w-16 flex justify-center items-start"
       >
-        <div class="rounded-full grid place-content-center p-2 shadow-2xl z-10">
+        <div class="rounded-full linear-pinky grid place-content-center p-2 shadow-2xl z-10">
           <img
             class="h-full w-full"
             src="/assets/images/icon-back.svg"
@@ -22,8 +22,6 @@
       Pick a Category
     </h1>
   </div>
-
-  <!-- ------------------------------categories div---------------------------------- -->
   <div
     class="grid grid-cols-3 place-content-center gap-10 max-sm:gap-5 max-sm:mt-7 h-[65vh] max-sm:h-[72vh] max-md:grid-cols-2 max-md:mt-7 max-sm:grid-cols-1"
   >
