--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -11,7 +11,7 @@
           class="menu-btn h-24 w-24 max-sm:h-16 max-sm:w-16 rounded-full flex justify-center items-center"
         >
           <div
-            class="menu-icon rounded-full grid place-content-center p-2 shadow-2xl z-10"
+            class="menu-icon rounded-full grid place-content-center linear-pinky p-2 shadow-2xl z-10"
           >
             <img
               class="icon-img h-full w-full max-sm:h-full max-sm:w-full"
