--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
     <div class="flex justify-center items-center lg:-mt-32 -mt-14">
       <div
         (click)="goToCategories()"
-        class="bg-purpleGradient rounded-full lg:p-8 lg:w-1/3 w-1/2 md:w-2/6 p-10 shadow-2xl"
+        class="linear-pinky rounded-full lg:p-8 lg:w-1/3 w-1/2 md:w-2/6 p-10 shadow-2xl"
       >
         <img src="../../../assets/images/icon-play.svg" alt="" />
       </div>
