--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="flex min-h-screen justify-center items-center">
+<div class="flex min-h-screen justify-center items-center font-mouseMemoirs">
   <div
-    class="bg-blueGradient rounded-3xl shadow-2xl lg:px-14 lg:py-8 px-10 py-8 lg:w-2/6 md:w-3/5"
+    class="linear-blue rounded-3xl shadow-2xl lg:px-14 lg:py-8 px-10 py-8 lg:w-2/6 md:w-3/5"
   >
     <div
       class="lg:w-80 lg:h-80 w-64 h-64 md:w-72 md:h-72 lg:-mt-28 md:-mt-24 -mt-20"
@@ -18,7 +18,7 @@
     <div class="text-center">
       <button
         (click)="goToGuidence()"
-        class="bg-blue cursor pointer text-white font-semibold lg:text-3xl md:text-4xl text-xl tracking-wider md:px-8 md:py-2 px-6 py-1.5 lg:mt-12 mt-24 rounded-full shadow-2xl"
+        class="bg-blue-2 cursor pointer text-white font-semibold lg:text-3xl md:text-4xl text-xl tracking-wider md:px-8 md:py-2 px-6 py-1.5 lg:mt-12 mt-24 rounded-full shadow-2xl"
       >
         How to Play
       </button>
